tests/baselines/reference/optionalPropertiesInClasses.errors.txt
tests/cases/compiler/optionalPropertiesInClasses.ts(10,7): error TS2420: Class 'C2' incorrectly implements interface 'ifoo'.
  Property 'y' is missing in type 'C2' but required in type 'ifoo'.


==== tests/cases/compiler/optionalPropertiesInClasses.ts (1 errors) ====
    interface ifoo {
    	x?:number;
    	y:number;
    }
    
    class C1 implements ifoo {
    	public y:number;
    }
    
    class C2 implements ifoo { // ERROR - still need 'y'
          ~~
!!! error TS2420: Class '{|C2|0|}' incorrectly implements interface '{|ifoo|1|}'.
!!! error TS2420:   Property 'y' is missing in type '{|C2|2|}' but required in type '{|ifoo|3|}'.
!!! related TS2728 tests/cases/compiler/optionalPropertiesInClasses.ts:3:2: 'y' is declared here.
!!! annotated symbol 0 tests/cases/compiler/optionalPropertiesInClasses.ts:10:7
!!! annotated symbol 1 tests/cases/compiler/optionalPropertiesInClasses.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/optionalPropertiesInClasses.ts:10:7
!!! annotated symbol 3 tests/cases/compiler/optionalPropertiesInClasses.ts:1:11
    	public x:number;
    }
    
    class C3 implements ifoo {
    	public x:number;
    	public y:number;
    }